--- a/sass/layout/_hero.sass
+++ b/sass/layout/_hero.sass
@@ -8,7 +8,7 @@
   @media(min-width: 725px)
     text-align: left
     padding-bottom: 0
-    height: 85vmin
+    height: 70vmin
     min-height: 800px
 
 .hero-text
