--- a/sass/layout/_home-promo.sass
+++ b/sass/layout/_home-promo.sass
@@ -4,6 +4,8 @@
     padding-left: 7%
     padding-top: 10em
     padding-bottom: 5.5em
+    @media(max-width: 725px)
+      text-align: center
 
 .img-box
   background: url(../img/social.jpg)
